<resources>
    <string name="app_name">UmaLibrary</string>
    <string name="Selecciona">Selecciona una biblioteca</string>
    <string name="InfTel">Informática-Teleco</string>
    <string name="General">Biblioteca General</string>
    <string name="Ciencias">Ciencias</string>
    <string name="AquiHay">Aqui hay algunas fotos de la biblioteca elegida</string>
    <string name="title_activity_flbutton">flbutton</string>
    <string name="send_image">Send new image</string>
    <string name="prueba">prueba</string>
    <string name="Economicas">Economicas</string>
</resources>
